# safe-dev-hooks

./: .claude-hooks.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: dogfooding.md  guard-rule-changes.md  no-personal-paths.md
.github/workflows/: ci.yml
docs/: best-practices.md  configuration.md  security-model.md
docs/hooks/: audit_log.md  bash_guard.md  config_guard.md  exfil_guard.md  exfil_output_scan.md  notify.md  quality_gate.md  secrets_guard.md  secrets_scan.md
docs/superpowers/: 2026-07-05-handoff.md
examples/: notify_wrapper.sh  settings.full.json  settings.minimal.json
hooks/: hooks.json
hooks/audit/: audit_log.py
hooks/config_change/: config_guard.py
hooks/lib/: config.py  hook_io.py  patterns.py  scanners.py
hooks/notification/: notify.py
hooks/post_tool_use/: exfil_output_scan.py  quality_gate.py  secrets_scan.py
hooks/pre_tool_use/: bash_guard.py  exfil_guard.py  secrets_guard.py
rules/: bash_ask.json  bash_deny.json  confidential_markers.json  pii_patterns.json  secret_patterns.json  semantic_prompt.md  sensitive_paths.json
tests/: conftest.py  helpers.py  test_audit_and_notify.py  test_bash_guard.py  test_config.py  test_config_guard.py  test_exfil_guard.py  test_exfil_output_scan.py  test_exfil_semantic.py  test_hook_io.py  test_notify_wrapper.py  test_packaging.py  test_patterns.py  test_quality_gate.py  test_scanners.py  test_secrets_guard.py  test_secrets_scan.py
(+17 files in other folders)
